fix redirection from home page, fix overflow on little screens, make panel blocking

--- a/react-client/src/pages/home/home.scss
+++ b/react-client/src/pages/home/home.scss
@@ -59,7 +59,7 @@ $header-size: 3rem;
   }
 
   .nav-bar {
-    flex: 1;
+    flex: 1 2;
     width: 20%;
     padding: 0.5rem;
     border-right: 2px solid #f1f1f1;
