--- a/react-client/src/pages/loading/loading.scss
+++ b/react-client/src/pages/loading/loading.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   width: 100%;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .centered-loading {
